{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 18,
  "lineage": "004947a3-f579-ece5-0f5f-0248df8fa680",
  "resources": [
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "ayush",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:vpc/vpc-046ca8c61e160877d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0ac1e1141a0af0109",
            "default_route_table_id": "rtb-09511a39cfa6158ba",
            "default_security_group_id": "sg-0f5f3c3aba506d184",
            "dhcp_options_id": "dopt-09a8ffbad1c794ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-046ca8c61e160877d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09511a39cfa6158ba",
            "owner_id": "279064251746",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02167eae61967e403",
            "arn": "arn:aws:ec2:us-west-2:279064251746:instance/i-0ea3c7730ae8b1402",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea3c7730ae8b1402",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03ff53f94461a0deb"
              }
            ],
            "primary_network_interface_id": "eni-03ff53f94461a0deb",
            "private_dns": "ip-172-31-6-45.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.45",
            "public_dns": "ec2-35-91-52-15.us-west-2.compute.amazonaws.com",
            "public_ip": "35.91.52.15",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f393e066a6c59544",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dev-automata"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072bb00483bbfcfe4",
            "tags": {
              "Environment": "dev",
              "Name": "dev-automate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-automate"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0222e24cc0e28bd5a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "i-0ea3c7730ae8b1402",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.ayush",
            "module.dev-infra.aws_key_pair.terra_key",
            "module.dev-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:security-group/sg-0222e24cc0e28bd5a",
            "description": "this will add a tf generated security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all access open outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0222e24cc0e28bd5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSh open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-automata",
            "name_prefix": "",
            "owner_id": "279064251746",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-automate"
            },
            "tags_all": {
              "Name": "dev-automate"
            },
            "timeouts": null,
            "vpc_id": "vpc-046ca8c61e160877d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "sg-0222e24cc0e28bd5a",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.ayush"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "ayush",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:vpc/vpc-046ca8c61e160877d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0ac1e1141a0af0109",
            "default_route_table_id": "rtb-09511a39cfa6158ba",
            "default_security_group_id": "sg-0f5f3c3aba506d184",
            "dhcp_options_id": "dopt-09a8ffbad1c794ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-046ca8c61e160877d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09511a39cfa6158ba",
            "owner_id": "279064251746",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02167eae61967e403",
            "arn": "arn:aws:ec2:us-west-2:279064251746:instance/i-0862647de4b489c84",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0862647de4b489c84",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prd-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f0b39b8d20924c4a"
              }
            ],
            "primary_network_interface_id": "eni-0f0b39b8d20924c4a",
            "private_dns": "ip-172-31-2-191.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.191",
            "public_dns": "ec2-44-248-32-68.us-west-2.compute.amazonaws.com",
            "public_ip": "44.248.32.68",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a7665cd2b2df3fff",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prd-automata"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072bb00483bbfcfe4",
            "tags": {
              "Environment": "prd",
              "Name": "prd-automate"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "prd-automate"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b53ca8c66e3f9fe8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "i-0862647de4b489c84",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.prd-infra.aws_default_vpc.ayush",
            "module.prd-infra.aws_key_pair.terra_key",
            "module.prd-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:279064251746:security-group/sg-0b53ca8c66e3f9fe8",
            "description": "this will add a tf generated security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all access open outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b53ca8c66e3f9fe8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSh open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prd-automata",
            "name_prefix": "",
            "owner_id": "279064251746",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prd-automate"
            },
            "tags_all": {
              "Name": "prd-automate"
            },
            "timeouts": null,
            "vpc_id": "vpc-046ca8c61e160877d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "279064251746",
            "id": "sg-0b53ca8c66e3f9fe8",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.prd-infra.aws_default_vpc.ayush"
          ]
        }
      ]
    }
  ]
}